进一步高仿，左上角的有了日期的显示，界面进行了改进，增加了一条显示当前时间的线，但是还不能实现左右滚动时新的一天也显示当前时间。

--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -4,19 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.AppCompatButton
+    <!--<android.support.v7.widget.AppCompatButton-->
 
-        android:id="@+id/Button_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="换一个" />
+        <!--android:id="@+id/Button_test"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="换一个" />-->
 
 
-        <com.eagzzycsl.smartable.CompleteByDayView
+    <com.eagzzycsl.smartable.CompleteByDayView
             android:id="@+id/calendarView_main"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
-
             />
 </LinearLayout>
