--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,10 @@
         <item name="colorAccent">@color/accent</item>
         <item name="color">@color/icons</item>
     </style>
+    <style name="textView_date_byDayView">
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+
+    </style>
 </resources>
