--- a/app/src/main/res/layout/classify_list.xml
+++ b/app/src/main/res/layout/classify_list.xml
@@ -1,239 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--第一块-->
+<!--TODO 最外层的LinearLayout姿势神奇，这个框架会随着里面的东西而改变（例如当里面有三块的时候，这个东西就变成“不规则完全自适应”，其颜色有效、大小、margin貌似无效）
+TODO 然后,java里的 inflate, addview 和addView 里第二个参数的具体含义。
+TODO 还有对第二个参数的后期设定margin是有用的，但是如果没有对第二个参数进行margin设定又没有在这个xml里多套一层，就会报错！！！
+ -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:background="#666666">
+    android:orientation="vertical"
+    android:id="@+id/box">
 
-    <view.FlowLayout
-        android:padding="0dp"
-        android:id="@+id/id_flowlayout"
-        android:layout_width="fill_parent"
-        android:background="#F7F7F7"
-        android:layout_height="wrap_content" >
-        //第一块
+    <LinearLayout
+        android:layout_width="155dip"
+        android:layout_height="190dip"
+        android:layout_margin="7dp"
+        android:background="#0000ff"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dip"
+            android:background="#FFFFFF"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="155dp"
-                android:layout_height="170dp"
-                android:layout_margin="7dp"
-                android:background="#ffffff"
-                android:orientation="vertical" >
+            <TextView
+                android:id="@+id/classify_stitle1"
+                android:layout_width="115dip"
+                android:layout_height="42dip"
+                android:background="#FFFFFF"
+                android:padding="5dip"
+                android:textColor="#383838"
+                android:textSize="21dip" />
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="40dp"
-                    android:background="#FFFFFF"
-                    android:orientation="horizontal" >
+            <ImageButton
+                android:id="@+id/ic_suggestions_add"
+                android:layout_width="39dip"
+                android:layout_height="39dip"
+                android:layout_marginRight="10dip"
+                android:background="#D5D5D5"
+                android:contentDescription="@string/desc"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_suggestions_add_blue"
+                android:tint="#ffffff" />
+        </LinearLayout>
 
-                    <TextView
-                        android:id="@+id/classify_stitle1"
-                        android:layout_width="115dp"
-                        android:layout_height="39dp"
-                        android:textColor="#383838"
-                        android:textSize="21dp"
-                        android:padding="5dp"
-                        android:background="#FFFFFF" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dip"
+            android:background="#00000000"
+            android:orientation="vertical">
 
-                    <ImageButton
-                        android:id="@+id/ic_suggestions_add"
-                        android:layout_width="39dp"
-                        android:layout_height="39dp"
-                        android:layout_marginRight="10dp"
-                        android:background="#D5D5D5"
-                        android:contentDescription="@string/desc"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_suggestions_add_blue"
-                        android:tint="#ffffff" />
-                </LinearLayout>
+            <ListView
+                android:id="@+id/listContent1"
+                android:layout_width="155dip"
+                android:layout_height="154dip"
+                android:background="#FFFFFF"
+                android:divider="@color/divider_color"
+                android:dividerHeight="1px"
+                android:fastScrollEnabled="true"
+                android:focusable="true" />
+        </LinearLayout>
+    </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="130dp"
-                    android:background="#ffffff"
-                    android:orientation="vertical" >
-
-                    <ListView
-                        android:id="@+id/listContent1"
-                        android:layout_width="fill_parent"
-                        android:layout_height="130dp"
-                        android:divider="@color/divider_color"
-                        android:background="#ffffff"
-                        android:dividerHeight="1px"
-                        android:fastScrollEnabled="true"
-                        android:focusable="true" />
-                </LinearLayout>
-            </LinearLayout>
-
-        //第二块
-            <LinearLayout
-                android:layout_width="155dp"
-                android:layout_height="170dp"
-                android:layout_margin="7dp"
-                android:background="#ffffff"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="40dp"
-                    android:background="#ffffff"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/classify_stitle2"
-                        android:layout_width="115dp"
-                        android:layout_height="39dp"
-                        android:textColor="#383838"
-                        android:textSize="21dp"
-                        android:padding="5dp"
-                        android:background="#FFFFFF" />
-
-                    <ImageButton
-                        android:id="@+id/ic_suggestions_add2"
-                        android:layout_width="39dp"
-                        android:layout_height="39dp"
-                        android:layout_marginRight="10dp"
-                        android:background="#D5D5D5"
-                        android:contentDescription="@string/desc"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_suggestions_add_blue"
-                        android:tint="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="130dp"
-                    android:background="#ffffff"
-                    android:orientation="vertical" >
-
-                    <ListView
-                        android:id="@+id/listContent2"
-                        android:layout_width="fill_parent"
-                        android:layout_height="130dp"
-                        android:divider="@color/divider_color"
-                        android:background="#ffffff"
-                        android:dividerHeight="1px"
-                        android:fastScrollEnabled="true"
-                        android:focusable="true" />
-                </LinearLayout>
-            </LinearLayout>
+</LinearLayout>
 
 
-        //第三块
+    <!-- <LinearLayout
+         android:id="@+id/classify_big_linear"
+         android:layout_width="155dp"
+         android:layout_height="170dp"'
+         android:layout_margin="7dp"
+         android:background="#ffffff"
+         android:orientation="vertical" >
 
-            <LinearLayout
-                android:layout_width="155dp"
-                android:layout_height="170dp"
-                android:layout_margin="7dp"
-                android:background="#ffffff"
-                android:orientation="vertical" >
+         <LinearLayout
+             android:id="@+id/classify_add_textview"
+             android:layout_width="fill_parent"
+             android:layout_height="40dp"
+             android:background="#FFFFFF"
+             android:orientation="horizontal" >
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="40dp"
-                    android:background="#FFFFFF"
-                    android:orientation="horizontal" >
+            &lt;!&ndash; <include
+                 layout="@layout/classify_textview"
+                 ></include>&ndash;&gt;
+            &lt;!&ndash; <TextView
+                 android:id="@+id/classify_stitle1"
+                 android:layout_width="115dp"
+                 android:layout_height="39dp"
+                 android:textColor="#383838"
+                 android:textSize="21dp"
+                 android:padding="5dp"
+                 android:background="#FFFFFF" />
 
-                    <TextView
-                        android:id="@+id/classify_stitle3"
-                        android:layout_width="115dp"
-                        android:layout_height="39dp"
-                        android:textColor="#383838"
-                        android:textSize="21dp"
-                        android:padding="5dp"
-                        android:background="#FFFFFF" />
+             <ImageButton
+                 android:id="@+id/ic_suggestions_add"
+                 android:layout_width="39dp"
+                 android:layout_height="39dp"
+                 android:layout_marginRight="10dp"
+                 android:background="#D5D5D5"
+                 android:contentDescription="@string/desc"
+                 android:scaleType="fitXY"
+                 android:src="@drawable/ic_suggestions_add_blue"
+                 android:tint="#ffffff" />&ndash;&gt;
+         </LinearLayout>
 
-                    <ImageButton
-                        android:id="@+id/ic_suggestions_add3"
-                        android:layout_width="39dp"
-                        android:layout_height="39dp"
-                        android:layout_marginRight="10dp"
-                        android:background="#D5D5D5"
-                        android:contentDescription="@string/desc"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_suggestions_add_blue"
-                        android:tint="#ffffff" />
-                </LinearLayout>
+         <LinearLayout
+             android:id="@+id/classify_add_listview"
+             android:layout_width="fill_parent"
+             android:layout_height="130dp"
+             android:background="#ffffff"
+             android:orientation="vertical"
+             >
 
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="130dp"
-                    android:background="#ffffff"
-                    android:orientation="vertical" >
+             <include
+                 layout="@layout/classify_listview"
+                 ></include>
 
-                    <ListView
-                        android:id="@+id/listContent3"
-                        android:layout_width="fill_parent"
-                        android:layout_height="130dp"
-                        android:divider="@color/divider_color"
-                        android:background="#ffffff"
-                        android:dividerHeight="1px"
-                        android:fastScrollEnabled="true"
-                        android:focusable="true" />
-                </LinearLayout>
-            </LinearLayout>
-
-        //第四块
-            <LinearLayout
-                android:layout_width="155dp"
-                android:layout_height="170dp"
-                android:layout_margin="7dp"
-                android:background="#ffffff"
-                android:orientation="vertical" >
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="40dp"
-                    android:background="#ffffff"
-                    android:orientation="horizontal" >
-
-                    <TextView
-                        android:id="@+id/classify_stitle4"
-                        android:layout_width="115dp"
-                        android:layout_height="39dp"
-                        android:textColor="#383838"
-                        android:textSize="21dp"
-                        android:padding="5dp"
-                        android:background="#FFFFFF" />
-
-                    <ImageButton
-                        android:id="@+id/ic_suggestions_add4"
-                        android:layout_width="39dp"
-                        android:layout_height="39dp"
-                        android:layout_marginRight="10dp"
-                        android:background="#D5D5D5"
-                        android:contentDescription="@string/desc"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/ic_suggestions_add_blue"
-                        android:tint="#ffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="130dp"
-                    android:background="#ffffff"
-                    android:orientation="vertical" >
-
-                    <ListView
-                        android:id="@+id/listContent4"
-                        android:layout_width="fill_parent"
-                        android:layout_height="130dp"
-                        android:divider="@color/divider_color"
-                        android:background="#ffffff"
-                        android:dividerHeight="1px"
-                        android:fastScrollEnabled="true"
-                        android:focusable="true" />
-                </LinearLayout>
-            </LinearLayout>
-
-    </view.FlowLayout>
-    </RelativeLayout>
-
-
-
+            &lt;!&ndash; <ListView
+                 android:id="@+id/listContent1"
+                 android:layout_width="fill_parent"
+                 android:layout_height="130dp"
+                 android:divider="@color/divider_color"
+                 android:background="#ffffff"
+                 android:dividerHeight="1px"
+                 android:fastScrollEnabled="true"
+                 android:focusable="true" />&ndash;&gt;
+         </LinearLayout>
+     </LinearLayout>-->
 
 
 
