--- a/app/src/main/res/layout/fragment_kind.xml
+++ b/app/src/main/res/layout/fragment_kind.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout_test"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
+    android:background="#666666">
 
-    android:background="#aa00FF00"
-    android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="415dp"
+        android:background="#F7F7F7">
+
+        <view.FlowLayout
+            android:padding="0dp"
+            android:id="@+id/id_flowlayout"
+            android:layout_width="wrap_content"
+            android:background="#F7F7F7"
+            android:layout_height="wrap_content" >
+
+        </view.FlowLayout>
+    </ScrollView>
+
+</RelativeLayout>
 
 
-    <include
-        android:id="@+id/fenlei"
-        layout="@layout/classify_list" />
-</LinearLayout>
+
