对设置界面进行了更改，原来菅泽峰的依然保留不过加了一个到fragment里面去为了使用toolbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/main_glance_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#1e90ff"></FrameLayout>
+                ></FrameLayout>
             <!--悬浮按钮-->
             <!--there is a bug in support-->
             <!--http://stackoverflow.com/questions/30532863/how-to-add-shadow-to-the-fab-provided-with-the-android-support-design-library-->
