单天显示和数据库连接上了，增加了一堆注释改了一堆代码，同时引入了的一堆潜在的bug，和按类别显示的界面接口崩溃了，明天进行修复。

--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,7 +6,7 @@
     tools:context=".AddActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolBar_main"
+        android:id="@+id/toolBar_add"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary" />
@@ -115,7 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="2001-2-2" />
+                    tools:text="2001-2-2" />
 
 
                 <android.support.v7.widget.AppCompatTextView
@@ -124,7 +124,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="22:22" />
+                    tools:text="22:22" />
             </LinearLayout>
 
             <LinearLayout
