把java文件分了几个包，添加了一个按周预览的界面，同时修改了下启动界面，还有郭宇之前的修改了分类界面布局的参数

--- a/app/src/main/res/layout/fragment_day.xml
+++ b/app/src/main/res/layout/fragment_day.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <com.eagzzycsl.smartable.CompleteByDayView
+    <view.CompleteByDayView
         android:id="@+id/calendarView_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
