--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="paddingByLily">15dp</dimen>
+    <dimen name="singleAdd_bar_height">100dp</dimen>
+    <dimen name="singleAdd_bar_height_x2">200dp</dimen>
+    <dimen name="singleAdd_bar_textSize">32sp</dimen>
+    <dimen name="singleAdd_bar_innerPaddingVertical">20dp</dimen>
+    <dimen name="singleAdd_bar_innerPaddingHorizontal">40dp</dimen>
 </resources>
