--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,4 +34,8 @@
         <item name="android:textStyle">bold</item>
 
     </style>
+    <style name="addActivity_bar">
+
+    </style>
+
 </resources>
