--- a/app/src/main/res/drawable/angle_brackets_up.xml
+++ b/app/src/main/res/drawable/angle_brackets_up.xml
@@ -13,7 +13,9 @@
             android:pivotY="50%"
             android:toDegrees="60">
             <shape android:shape="line">
-                <stroke android:color="@color/background_material_light" android:width="10dp"></stroke>
+                <stroke
+                    android:width="@dimen/singleAdd_bar_interval"
+                    android:color="@color/background_material_light"></stroke>
             </shape>
         </rotate>
     </item>
