--- a/app/src/main/res/drawable/add_option_no_pos_bkg.xml
+++ b/app/src/main/res/drawable/add_option_no_pos_bkg.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_light"></solid>
+            <solid android:color="@color/add_pos_default"></solid>
         </shape>
     </item>
     <item
@@ -12,7 +12,7 @@
         <shape android:shape="rectangle">
             <stroke
                 android:width="@dimen/bkg_line_width"
-                android:color="@color/secondary_text"></stroke>
+                android:color="@color/primary"></stroke>
         </shape>
     </item>
 </layer-list>
