--- a/app/src/main/res/menu/menu_single_add.xml
+++ b/app/src/main/res/menu/menu_single_add.xml
@@ -1,19 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.eagzzycsl.smartable.SingleAddActivity">
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/singleAdd_action_delete"
-        android:icon="@drawable/icon_delete"
-        app:showAsAction="ifRoom"
+        android:icon="@drawable/icon_delete_white"
         android:title="delete this event"
-        />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/singleAdd_action_save"
-        android:icon="@drawable/icon_save"
-        app:showAsAction="ifRoom"
+        android:icon="@drawable/icon_done_white"
         android:title="save this event"
-        />
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
